--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       }
       li {
         list-style-type:none;
-        /* color: rgb(238,0,68); */
       }
       li {
         background-color: rgb(83,43,0);
+        background-color: rgb(238,0,68);
         border-radius: 10px; 
         -moz-border-radius: 10px; 
         -webkit-border-radius: 10px; 
@@ -25,7 +25,7 @@
         margin:0.5em;
       }
       li a {
-        color: rgb(178,251,111);
+        color: rgb(178,251,111); 
         font-size:2em;
       }
 
