--- a/examples/tap.html
+++ b/examples/tap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Tap Patch </title>
+    <title> Tap a Patch </title>
     <style>
       body {
         background-color:#A0A0A0;
