--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
     </header>
 
     <section class='main'>
-        <h2> Demos </h2>
-        <ul> 
-          <li> <a href='examples/hello-world.html'>Hello World   </a> </li>
-          <li> <a href='examples/tap.html'>Tap a Patch  </a> </li>
-          <li> <a href='examples/swipe.html'>Swipe a Patch </a></li>
-        </ul>
-        <h2> Play with wheel </h2>
+      <h3> Step By Step Rudimentary Wheel.js Application Demos </h3>
+      <h4> wheel.js concepts by example</h4>
+        <ol> 
+          <li> <a href='examples/first-app.html'>My First App </a> </li>
+          <li> <a href='examples/hello-world-view.html'>My Hellow World App and View </a> </li>
+          <li> <a href='examples/hello-world-namespace.html'>My First Namespaced App with View </a> </li>
+          <li> <a href='examples/patch-tap-app.html'>Tap a Patch App </a> </li>
+          <li> <a href='examples/patch-swipe-app.html'>Drag Patch App </a></li>
+          <li> <a href='examples/event-area-app.html'>Event Area App </a></li>
+        </ol>
+        <h3> Download your wheel.js </h3>
         <ul> 
           <li> <a href='examples/wheel-standalone-0.2.0.js'>jQuery+Wheel.js 0.2.0 (standalone) </a> </li>
         </ul>
