--- a/examples/5-patch-swipe-app.html
+++ b/examples/5-patch-swipe-app.html
@@ -7,7 +7,7 @@
         background-color:#A0A0A0;
         position:relative;
       }
-      .tap-patch {
+      .swipe-patch {
         width            : 149px;
         height           : 149px;
         margin-left      : 10px;
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="wheel-standalone-0.2.0.js"></script> 
 
     <script class='template' type="text/html" name='TapPatch'>
-      <div class="tap-patch">
+      <div class="swipe-patch">
       </div>
     </script>
 
