--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
       <h3> Step By Step Rudimentary Wheel.js Application Demos </h3>
       <h4> wheel.js concepts by example</h4>
         <ol> 
-          <li> <a href='examples/first-app.html'>My First App </a> </li>
-          <li> <a href='examples/hello-world-view.html'>My Hellow World App and View </a> </li>
-          <li> <a href='examples/hello-world-namespace.html'>My First Namespaced App with View </a> </li>
-          <li> <a href='examples/patch-tap-app.html'>Tap a Patch App </a> </li>
-          <li> <a href='examples/patch-swipe-app.html'>Drag Patch App </a></li>
-          <li> <a href='examples/event-area-app.html'>Event Area App </a></li>
+          <li> <a href='examples/1-first-app.html'>My First App </a> </li>
+          <li> <a href='examples/2-hello-world-view.html'>My Hellow World App and View </a> </li>
+          <li> <a href='examples/3-hello-world-namespace.html'>My First Namespaced App with View </a> </li>
+          <li> <a href='examples/4-patch-tap-app.html'>Tap a Patch App </a> </li>
+          <li> <a href='examples/5-patch-swipe-app.html'>Drag Patch App </a></li>
+          <li> <a href='examples/6-patch-drag-app.html'>Drag Patch App </a></li>
+          <li> <a href='examples/7-event-area-app.html'>Event Area App </a></li>
         </ol>
         <h3> Download your wheel.js </h3>
         <ul> 
