--- a/examples/1-first-app.html
+++ b/examples/1-first-app.html
@@ -3,7 +3,7 @@
     <section id="main">
     </section>
 
-    <script type="text/javascript" src="wheel-standalone-0.2.0.js"></script> 
+    <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
     <script class='template' type="text/html" name='HelloWorld'>
       <div> 
