--- a/examples/3-hello-world-namespace.html
+++ b/examples/3-hello-world-namespace.html
@@ -3,21 +3,21 @@
     <section id="main">
     </section>
 
-    <script type="text/javascript" src="wheel-standalone-0.2.0.js"></script> 
+    <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
-    <script class='template' type="text/html" name='HelloWorld'>
+    <script class='template' type="text/html" name='App.Hello.World'>
       <div> 
       </div>
     </script>
 
     <script type="text/javascript">
-      Wheel.App.subclass('MyHelloWorldApp', {
+      Wheel.App.subclass('App', {
         init: function() {
-          HelloWorld.build({parent:$('#main')});
+          App.Hello.World.build({parent:$('#main')});
         }
       });
       
-      Wheel.View.subclass('HelloWorld', {
+      Wheel.View.subclass('App.Hello.World', {
         // constructor
         init:function() {
           // $ jquery object
@@ -25,7 +25,7 @@
         }
       });
       
-      MyHelloWorldApp.build();
+      App.build();
 
      </script>
   </body>
