--- a/examples/5-patch-swipe-app.html
+++ b/examples/5-patch-swipe-app.html
@@ -25,20 +25,20 @@
     <section id="main">
     </section>
 
-    <script type="text/javascript" src="wheel-standalone-0.2.0.js"></script> 
+    <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
-    <script class='template' type="text/html" name='TapPatch'>
+    <script class='template' type="text/html" name='App.Patch.Swipe'>
       <div class="swipe-patch">
       </div>
     </script>
 
     <script type="text/javascript">
-      window.app = {
-        templates: Wheel.Templates.build(),
-        eventManager: (Modernizr.touch ? Wheel.TouchManager : Wheel.MouseManager).build()
-      }
-      window.app.templates.gather();
-      Wheel.View.subclass('TapPatch', {
+      Wheel.App.subclass('App', {
+        init: function() {
+          App.Patch.Swipe.build({parent:$('#main')});
+        }
+      });
+      Wheel.View.subclass('App.Patch.Swipe', {
         listen: function() {
           this.$.on('swipe', this.swipeChangesColor.bind(this));
         },
@@ -51,7 +51,7 @@
           this.$.css('background-color', rgbaColor);
         }
       });
-        TapPatch.build({parent:$('#main')});
+      App.build();
      </script>
   </body>
 </html>
