--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li> <a href='examples/2-hello-world-view.html'>My Hellow World App and View </a> </li>
           <li> <a href='examples/3-hello-world-namespace.html'>My First Namespaced App with View </a> </li>
           <li> <a href='examples/4-patch-tap-app.html'>Tap a Patch App </a> </li>
-          <li> <a href='examples/5-patch-swipe-app.html'>Drag Patch App </a></li>
+          <li> <a href='examples/5-patch-swipe-app.html'>Swipe a Patch App </a></li>
           <li> <a href='examples/6-patch-drag-app.html'>Drag Patch App </a></li>
           <li> <a href='examples/7-event-area-app.html'>Event Area App </a></li>
         </ol>
