--- a/examples/1-first-app.html
+++ b/examples/1-first-app.html
@@ -1,7 +1,7 @@
 <html>
   <body>
-    <section id="main">
-    </section>
+    <div id="main">
+    </div>
 
     <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
