--- a/examples/6-patch-drag-app.html
+++ b/examples/6-patch-drag-app.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-    <section id="main">
-    </section>
+    <div id="main">
+    </div>
 
     <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
