--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -23,8 +23,8 @@
     </style>
   </head>
   <body>
-    <section id="main">
-    </section>
+    <div id="main">
+    </div>
 
     <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
