--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
     <!-- scripts at bottom -->
   </head>
   <body>
-    <header>
       <h1> Wheel.js </h1>
-    </header>
 
-    <section class='main'>
+    <div class='main'>
       <h3> Step By Step Rudimentary Wheel.js Application Demos </h3>
       <h4> wheel.js concepts by example</h4>
         <ol> 
@@ -59,9 +57,9 @@
         </ol>
         <h3> Download your wheel.js </h3>
         <ul> 
-          <li> <a href='examples/wheel-standalone-0.2.0.js'>jQuery+Wheel.js 0.2.0 (standalone) </a> </li>
+          <li> <a href='examples/wheel-modern-standalone-0.3.1.js'>Zepto+Wheel.js 0.3.1 (standalone) </a> </li>
         </ul>
-    </section>
+    </div>
 
   </body>
 </html>
