--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Swipe a Patch </title>
+    <title> Event Generating </title>
     <style>
       body {
         background-color:#A0A0A0;
