mobile single page

--- a/examples/1-first-app.html
+++ b/examples/1-first-app.html
@@ -1,8 +1,11 @@
 <html>
+  <head>
+    <!-- mobile friendly : single page app - no zooming - device sensitive -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
   <body>
     <div id="main">
     </div>
-
     <script type="text/javascript" src="wheel-modern-standalone-0.3.1.js"></script> 
 
     <script class='template' type="text/html" name='HelloWorld'>
