--- a/examples/5-patch-swipe-app.html
+++ b/examples/5-patch-swipe-app.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- mobile friendly : single page app - no zooming - device sensitive -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> Swipe a Patch </title>
     <style>
       body {
