--- a/examples/2-hello-world-view.html
+++ b/examples/2-hello-world-view.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+    <!-- mobile friendly : single page app - no zooming - device sensitive -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+
   <body>
     <div id="main">
     </div>
