--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -10,13 +10,11 @@
         position:relative;
         width:320px;
       }
+      .event:nth-child(even) {background: #fad8Fa;}
+      .event:nth-child(odd) {background: #faEEf8; font-weight:bold;}
       .event-area {
         width            : 100%;
         height           : 150px;
-        padding-left      : 10px;
-        padding-right     : 10px;
-        padding-top       : 10px;
-        padding-bottom    : 10px;
         background-color : #C9C990;
         border-color     : #007700;
         border-width     : 1px;
@@ -69,7 +67,7 @@
         },
         eventFired: function(event) {
          var dom_string = "<div class=\'event "+event.type+"\'>"+event.type+" has fired</div>";
-         this.$.filter('.event-display').append(dom_string);
+         this.$.filter('.event-display').prepend(dom_string);
         }
       });
       App.build();
