--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="description" content="HTML5 worksheet Wheel.js">
     <meta name="author" content="Curtis Schofield / ram9.cc">
     <!-- mobile friendly : single page app - no zooming - device sensitive -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 
     <!-- give myself a consistant element style model to work with -->
     <link rel="stylesheet" href="reset.css">
