--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- mobile friendly : single page app - no zooming - device sensitive -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
     <title> Event Generating </title>
     <style>
       body {
