removed old meta definiton for viewport and added reset for html files

--- a/examples/1-first-app.html
+++ b/examples/1-first-app.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <!-- give myself a consistant element style model to work with -->
+    <link rel="stylesheet" href="reset.css">
     <!-- mobile friendly : single page app - no zooming - device sensitive -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
   </head>
