--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <!-- give myself a consistant element style model to work with -->
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="example/reset.css">
     <!-- scripts at bottom -->
   </head>
   <body>
