--- a/examples/4-patch-tap-app.html
+++ b/examples/4-patch-tap-app.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- give myself a consistant element style model to work with -->
+    <link rel="stylesheet" href="reset.css">
     <!-- mobile friendly : single page app - no zooming - device sensitive -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
     <title> Tap a Patch </title>
     <style>
