--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -63,7 +63,7 @@
           'tapend'
           ];
           for(var i = events.length-1; i >= 0; i--) {
-            this.$.on(events[i],this.eventFired.bind(this));
+            this.$.on(events[i],'.event-area',this.eventFired.bind(this));
           }
         },
         eventFired: function(event) {
