--- a/examples/6-patch-drag-app.html
+++ b/examples/6-patch-drag-app.html
@@ -5,7 +5,7 @@
     <!-- mobile friendly : single page app - no zooming - device sensitive -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 
-    <title> Drag Patch </title>
+    <title> Smooth Drag Patch </title>
     <style>
       body {
         background-color:#A0A0A0;
