modifications to examples from talking with Kane

--- a/examples/1-first-app.html
+++ b/examples/1-first-app.html
@@ -18,18 +18,10 @@
     <script type="text/javascript">
       Wheel.App.subclass('MyHelloWorldApp', {
         init: function() {
-          HelloWorld.build({parent:$('#main')});
-        }
-      });
-      
-      Wheel.View.subclass('HelloWorld', {
-        // constructor
-        init:function() {
-          // $ jquery object
           this.$.html("Hello World!");
         }
       });
-      
+      // inception point 
       MyHelloWorldApp.build();
 
      </script>
