--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -13,17 +13,22 @@
     <style>
       body {
         background-color:#A0A0A0;
-        position:relative;
       }
       .event:nth-child(even) {background: #fad8Fa;}
       .event:nth-child(odd) {background: #faEEf8; font-weight:bold;}
       .event-area {
         width            : 320px;
-        height           : 150px;
+        height           : 180px;
         background-color : #C9C990;
         border-color     : #007700;
         border-width     : 1px;
         border-style     : solid;
+
+      }
+      body .event-display {
+        height           : 300px;
+        overflow         : auto;
+
       }
     </style>
   </head>
