--- a/examples/7-event-area-app.html
+++ b/examples/7-event-area-app.html
@@ -13,21 +13,22 @@
     <style>
       body {
         background-color:#A0A0A0;
+        height:100%;
       }
       .event:nth-child(even) {background: #fad8Fa;}
       .event:nth-child(odd) {background: #faEEf8; font-weight:bold;}
       .event-area {
         width            : 320px;
-        height           : 180px;
+        height           : 120px;
         background-color : #C9C990;
         border-color     : #007700;
         border-width     : 1px;
         border-style     : solid;
 
       }
-      body .event-display {
-        height           : 300px;
-        overflow         : auto;
+      .event-display {
+        height           : 200px;
+        overflow         : hidden;
 
       }
     </style>
