--- a/index.html
+++ b/index.html
@@ -6,27 +6,35 @@
     <style>
       body {
         width:320px;
-        background-color: rgb(84,166,238);
-        color: rgb(255,255,255);
-        font-family: times;
+        background-color:rgb(119 ,228,255);
+        color: rgb(18,18,18);
+        font-family: sans-serif;
         font-weight: 200;
-
+      }
+      ol {
+        margin:0;
+        padding:0;
+        width:300px;
       }
       li {
         list-style-type:none;
       }
       li {
-        background-color: rgb(83,43,0);
         background-color: rgb(238,0,68);
         border-radius: 10px; 
         -moz-border-radius: 10px; 
         -webkit-border-radius: 10px; 
-        padding:0.5em;
-        margin:0.5em;
+        margin-bottom:0.5em;
+        margin-left:10px;;
+        margin-right:10px;;
+        padding-top:11px;
+        padding-bottom:11px;
+        padding-left:11px;
+
       }
       li a {
-        color: rgb(178,251,111); 
-        font-size:2em;
+        color:rgb(235,241,241);
+        font-size:1.2em;
       }
 
     </style>
@@ -37,7 +45,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 
     <!-- give myself a consistant element style model to work with -->
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="example/reset.css">
     <!-- scripts at bottom -->
   </head>
@@ -57,9 +64,9 @@
           <li> <a href='examples/7-event-area-app.html'>Event Area App </a></li>
         </ol>
         <h3> Download your wheel.js </h3>
-        <ul> 
+        <ol> 
           <li> <a href='examples/wheel-modern-standalone-0.3.1.js'>Zepto+Wheel.js 0.3.1 (standalone) </a> </li>
-        </ul>
+        </ol>
     </div>
 
   </body>
